--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bluebird": "^2.10.2",
     "body-parser": "^1.13.3",
     "bootstrap": "3.3.5",
+    "chalk": "^1.1.3",
     "express": "^4.13.3",
     "jquery": "^3.0.0",
     "morgan": "^1.6.1",
